[build-system]
requires = ["flit_core >=3.3,<4,!=3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "hikari-tanjun"
readme = "README.md"
requires-python = ">=3.9.0,<3.12"
license = {file = "LICENSE"}
authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
keywords = ["hikari"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    # "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["alluka~=0.1", "hikari~=2.0.0.dev110"]
dynamic = ["description", "version"]

[project.urls]
homepage = "https://github.com/FasterSpeeding/Tanjun"
repository = "https://github.com/FasterSpeeding/Tanjun"
documentation = "https://tanjun.cursed.solutions/"
changelog = "https://github.com/FasterSpeeding/tanjun/blob/master/CHANGELOG.md"

[tool.flit.module]
name = "tanjun"

[tool.black]
line-length     = 120
target-version  = ["py39"]
include         = ".*pyi?$"
extend-exclude = ["^/tanjun/_vendor/.*"]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
branch = true
timid = false
source = ["tanjun"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^if typing.TYPE_CHECKING:$"
]
omit = ["tanjun/_vendor/*"]

[tool.isort]
profile = "black"
force_single_line = true
skip = ["alluka/_vendor"]

[tool.pyright]
exclude = ["tanjun/_vendor"]
include = ["examples", "tanjun", "noxfile.py", "tests"]

pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "error"

reportIncompatibleMethodOverride = "warning"    # This relies on ordering for key-word only arguments
                                                # which is more annoying than it's worth
reportUnknownMemberType = "warning"             # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"           # Pretty much the same as reportUnknownMemberType
reportUnknownLambdaType = "warning"
reportImportCycles = "warning"                  # This isn't necessarily an issue if it's type checking only.
reportUnknownVariableType = "warning"           # Lotta false-positives, might fix/change later.

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
required_plugins = ["pytest-asyncio", "pytest-timeout"]

[tool.mypy]
# some good strict settings
python_version = 3.9
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

# these are used by pyright
warn_unused_ignores = false
warn_redundant_casts = false

# compatibility with pyright
allow_redefinition = true
disable_error_code = ["return-value"]

# Ignore vendored modules
exclude = ["tanjun/_vendor/"]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
exclude-classes = """tanjun.clients:(_LoaderDescriptor|_UnloaderDescriptor) | .*Proto"""
exclude-modules = "tanjun._vendor"
