[build-system]
requires = ["flit_core >=3.3,<4,!=3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "hikari-tanjun"
version = "2.17.7"
readme = "README.md"
requires-python = ">=3.11.0,<3.14"
license = {file = "LICENSE"}
authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
keywords = ["hikari"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["alluka>=0.4, <1", "hikari>=2.0.0.dev115, <3", "typing-extensions>=4.5, <5"]
dynamic = ["description"]

[project.urls]
Homepage = "https://github.com/FasterSpeeding/Tanjun"
Repository = "https://github.com/FasterSpeeding/Tanjun"
Documentation = "https://tanjun.cursed.solutions/"
Changelog = "https://tanjun.cursed.solutions/changelog"

[dependency-groups]
docs = [
    "markdown-include>=0.8",
    "mkdocs>=1.4.2",
    "mkdocstrings[python]>=0.19",
    "mkdocs-material>=8.5.11",
    "mkdocs-minify-plugin>=0.6.4",
]
freeze-locks = ["uv"]
lint = [
    "codespell>=2.2.2",
    "pre-commit-hooks>=4.4",
    "slotscheck>=0.16.1",
    "ruff",
]
publish = ["flit>=3.8.0"]
reformat = [
    "black>=22.10.0",
    "isort>=5.11.3",
    "pre-commit-hooks>=4.4",
    "pycln>=2.1.2",
    "sort-all>=1.2",
]
templating = ["Jinja2>=3.1.2"]
tests = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-sugar>=0.9.6",
    "pytest-timeout>=2.1",
    "freezegun>=1.2.2",
    "pytest-asyncio>=0.20.1",
    "pytest-timeout>=2.1",
    "pytest-xdist>=3.1",
    # The pytest extensions aren't compatible with v8 yet.
    "pytest==7.4.0",
]
type-checking = [
    "mypy>=0.991",
    "nox",
    "pyright>=1.1.285",
    {include-group = "tests"},
]

[tool.flit.module]
name = "tanjun"

[tool.black]
include = ".*pyi?$"
line-length = 120
skip-magic-trailing-comma = true
target-version = ["py311"]

[tool.codespell]
ignore-regex = "TimeSchedule|Nd"

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
branch = true
timid = false
source = ["tanjun"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^if typing.TYPE_CHECKING:$"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in ``
    "COM812",  # Trailing comma missing (incompatible with black)
    "D102",    # Missing docstring in public method
    "D105",    # Missing docstring in magic method
    "FIX002",  # Line contains TODO, consider resolving the issue
    "I001",    # [*] Import block is un-sorted or un-formatted
    "N818",    # Exception name `FailedModuleUnload` should be named with an Error suffix
    "PGH003",   # Use specific rule codes when ignoring type issues
    "PYI041",  # Use `float` instead of `int | float`
    "S101",    # Use of `assert` detected
    "SIM105",  # Use `contextlib.suppress(Error)` instead of `try`-`except`-`pass`
    "SIM108",  # Use ternary operator `` instead of `if`-`else`-block
    "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
    "TD003",   # Missing issue link on the line following this TODO
]

[tool.ruff.lint.per-file-ignores]
"docs_src/**/*.py" = [
    "ARG001",  # Unused function argument: ``
    "B008",    # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "FBT002",  # Boolean default positional argument in function definition
    "F841",    # Local variable `` is assigned to but never used
    "INP001",  # File `` is part of an implicit namespace package. Add an `__init__.py`.
    "N806",    # Variable `` in function should be lowercase
    "PIE790",  # [*] Unnecessary `...` literal
    "PYI013",  # [*] Non-empty class body must not contain `...`
    "T201",    # `print` found
]
"examples/**/*.py" = [
    "B008",    # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "FBT001",  # Boolean-typed positional argument in function definition
    "PIE790",  # [*] Unnecessary `...` literal
    "PYI013",  # [*] Non-empty class body must not contain `...`
]
"noxfile.py" = [
    "F403",  # `from noxfile import *` used; unable to detect undefined name
]
"tests/**/*.py" = [
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
    "FBT003",   # Boolean positional value in function call
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison, consider replacing `` with a constant variable
    "SLF001",   # Private member accessed: ``
]
"tests/test_annotations_future_annotations.py" = [
    "B008",    # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "PLW0603", # Using the global statement to update `` is discouraged
    "UP007",   # [*] Use `X | Y` for type annotations
]
"tests/test_annotations.py" = [
    "B008",    # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "UP007",   # [*] Use `X | Y` for type annotations
]
"tests/test_checks.py" = [
    "ARG002",  # Unused method argument: ``
]
"tests/test_clients_future_annotations.py" = [
    "B008",     # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "PLW0603",  # Using the global statement to update `` is discouraged
    "UP007",    # [*] Use `X | Y` for type annotations
]
"tests/test_clients.py" = [
    "B008",    # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "UP007",   # [*] Use `X | Y` for type annotations
]
"tests/test_components_future_annotations.py" = [
    "B008",     # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "PLW0603",  # Using the global statement to update `` is discouraged
    "UP007",    # [*] Use `X | Y` for type annotations
]
"tests/test_components.py" = [
    "B008",    # Do not perform function call `` in argument defaults; instead, perform the call within the function, or read the default from a module-level singleton variable
    "UP007",   # [*] Use `X | Y` for type annotations
]
"tests/test_schedules.py" = [
    "DTZ001",  # `datetime.datetime()` called without a `tzinfo` argument
    "DTZ005",  # `datetime.datetime.now()` called without a `tz` argument
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pycodestyle]
# Technically this is 120, but black has a policy of "1 or 2 over is fine if it is tidier", so we have to raise this.
max-line-length = 130

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-returns = 15
max-statements = 100

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
# some good strict settings
python_version = "3.11"
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

# these are used by pyright
warn_unused_ignores = false
warn_redundant_casts = false

# compatibility with pyright
allow_redefinition = true
disable_error_code = ["type-abstract"]

[tool.piped]
default_sessions = [
    "reformat",
    "verify-markup",
    "lint",
    "spell-check",
    "slot-check",
    "type-check",
    "test",
    "verify-types",
]
project_name = "tanjun"
top_level_targets = ["./docs_src", "./examples", "./noxfile.py", "./tanjun", "./tests"]

[tool.piped.github_actions.freeze_for_pr]
[tool.piped.github_actions.lint]
[tool.piped.github_actions.pr_docs]
[tool.piped.github_actions.publish]
[tool.piped.github_actions.py_test]
codeclimate_token = "117363998d7c6b4bab4ac57348026e1089767e142ccca3eb8cc37da6cf4cc8b9"
python_versions = ["3.11", "3.12", "3.13"]

[tool.piped.github_actions.reformat]
[tool.piped.github_actions.release_docs]
[tool.piped.github_actions.resync_piped]
[tool.piped.github_actions.type_check]
[tool.piped.github_actions.update_licence]
[tool.piped.github_actions.upgrade_locks]
[tool.piped.github_actions.verify_types]

[tool.pycln]
exclude = "docs_src"

[tool.pyright]
include = ["docs_src", "examples", "tanjun", "noxfile.py", "tests"]

pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"  # Is only "warning" on strict mode.

# Error code which are disabled even when general strict.
reportShadowedImports = "error"
reportCallInDefaultInitializer = "none"  # Ended up just complaining about cases where this was fine (e.g. timedeltas).
reportImplicitStringConcatenation = "none"  # Conflicts with flake8 config.
reportMissingSuperCall = "none"  # Way too strict (requires calls to `object.__init__`).
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "none"  # Enforces doing `_ = ...`.

# Error codes which lead to too many false-positives.
reportIncompatibleMethodOverride = "warning"    # This relies on ordering for key-word only arguments
                                                # which is more annoying than it's worth
reportUnknownMemberType = "warning"             # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"           # Pretty much the same as reportUnknownMemberType
reportUnknownLambdaType = "warning"
reportImportCycles = "warning"                  # This isn't necessarily an issue if it's type checking only.
reportUnknownVariableType = "warning"           # Lotta false-positives, might fix/change later.

reportIncompatibleVariableOverride = "warning"  # This is not really do-able in a lang with no frozen objects.

# Temporarily disabled until switch to new Yuyo contexts.
reportDeprecated = "warning"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
timeout = 15
required_plugins = ["pytest-asyncio", "pytest-timeout"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
exclude-classes = """
tanjun.clients:(_LoaderDescriptor|_UnloaderDescriptor)
| tanjun.dependencies.reloaders:(_PathLoader|_ScanResult)
| .*Proto
"""

[tool.uv]
reinstall-package = ["hikari-tanjun"]
