[metadata]
author = Faster Speeding
author_email = lucina@lmbyrne.dev
name = hikari-tanjun
url = https://github.com/FasterSpeeding/Tanjun
version = 2.0.0a1
description = A collection of utility classes and functions for use with Hikari
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hikari
license = BSD 3-Clause License
include_package_data = True
classifiers=
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications :: Chat
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
include_package_data = True
package_data= tanjun: [py.typed]
packages = find:
python_requires = >=3.9.0,<3.12
install_requires =
    hikari~=2.0.0.dev101
    hikari-yuyo~=0.0.3a7

[options.packages.find]
where=tanjun
